# dana-journal

./: .gitignore  CLAUDE.md  FOLDER_SELECTION_FIX.md  PROJECT_OUTLINE.md  README.md  pyproject.toml  test_folder_selection.py
.github/workflows/: build-and-release.yml  test.yml
dana-desktop/: CLAUDE.md  README.md
dana-desktop/docs/: ARCHITECTURE.md  PROJECT_OUTLINE.md
dana-desktop/scripts/: version.py
dana-desktop/src/: main.py
dana-desktop/src/ai/: prompts.py  service.py
dana-desktop/src/config/: __init__.py
dana-desktop/src/storage/: __init__.py  file_manager.py  integration.py
dana-desktop/src/ui/: __init__.py
dana-desktop/src/ui/components/: ai_reflection.py  calendar.py  text_editor.py
dana-desktop/tests/: reset_onboarding.py  test_ai_service.py  test_file_manager.py  test_file_picker.py  test_onboarding_flow.py
dana-obsidian/: README.md  TODOS.md  main.ts  package-lock.json  package.json  styles.css
dana-obsidian/docs/: design.md  prd.md
dana-obsidian/docs/superpowers/plans/: 2026-07-04-dana-mvp-simplification-plan.md  2026-07-04-dana-reflection-depth-plan.md
dana-obsidian/docs/superpowers/specs/: 2026-07-04-dana-reflection-depth-design.md
dana-obsidian/src/: ContextResolver.ts  ConversationStore.ts  DanaPanel.ts  JournalDetector.ts  PromptBuilder.ts  SecretStore.ts  SettingsTab.ts  VaultReader.ts  types.ts
dana-obsidian/src/providers/: AIProvider.ts  OllamaProvider.ts  OpenAIProvider.ts
dana-obsidian/tests/: ContextResolver.test.ts  ConversationStore.test.ts  JournalDetector.test.ts  PromptBuilder.test.ts  SecretStore.test.ts  VaultReader.test.ts  VaultReaderSort.test.ts  providers.test.ts
dana-obsidian/tests/__mocks__/: obsidian.ts
documentation/: AI_IMPLEMENTATION_STATUS.md  AI_Journal_Vault_PRD.md  ARCHITECTURE.md  FOLDER_SELECTION_FIX.md  LLM_ANALYSIS.md  PACKAGING.md  PROJECT_OUTLINE.md
plugin/: manifest.json  styles.css
plugin/src/: ConversationStore.ts  DanaPanel.ts  PromptBuilder.ts  SettingsTab.ts  VaultReader.ts
plugin/src/providers/: AIProvider.ts  OllamaProvider.ts  OpenAIProvider.ts
scripts/: build.py  build.sh  package.sh
src/ai/: download_model.py  inference.py  service.py
src/dana_journal/: __init__.py  main.py
src/dana_journal/ai/: prompts.py  service.py
src/dana_journal/config/: app_config.py
src/dana_journal/storage/: file_manager.py  integration.py
src/dana_journal/ui/: theme.py
src/dana_journal/ui/components/: __init__.py  ai_reflection.py  calendar.py  file_explorer.py  onboarding.py  text_editor.py
src/journal_vault/: main.py
src/journal_vault/ai/: __init__.py  download_model.py  inference.py  prompts.py  service.py
src/journal_vault/config/: __init__.py  app_config.py
src/journal_vault/storage/: __init__.py  auto_save.py  file_manager.py  integration.py
src/journal_vault/ui/: __init__.py  theme.py
src/journal_vault/ui/components/: __init__.py  ai_reflection.py  calendar.py  file_explorer.py  onboarding.py  text_editor.py
src/storage/: auto_save.py
src/ui/components/: file_explorer.py  onboarding.py
test_vault/.journal_vault/: index.sqlite
test_vault/entries/2025/07/: 2025-07-08.md  2025-07-09.md  2025-07-25.md
test_vault/entries/2025/08/: 2025-08-01.md  2025-08-02.md  2025-08-03.md  2025-08-04.md  2025-08-05.md  2025-08-06.md  2025-08-07.md  2025-08-08.md
tests/: reset_onboarding.py  test_file_picker.py  test_folder_selection.py
