[project]
name = "dana-journal"
version = "0.1.0"
description = "Dana - safe journal space: A privacy-first desktop journaling companion with local AI support"
authors = [
    {name = "Dana Team"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flet[all]==0.28.3",
    "pydantic>=2.8.0",
    "python-dateutil>=2.9.0",
    "pyyaml>=6.0.2",
    "llama-cpp-python>=0.2.90",
    "huggingface-hub>=0.25.0",
    "psutil>=5.9.0",
    "requests>=2.31.0",
]

[project.scripts]
dana-journal = "dana_journal.main:main"
dana = "dana_journal.main:main"

[project.gui-scripts]
dana = "dana_journal.main:main"

[tool.flet]
# Product Information
product = "Dana - safe journal space"
company = "Dana Team"
copyright = "Copyright (C) 2025 Dana Team"
build_number = 1

# App Configuration
[tool.flet.app]
module = "main"
path = "src/dana_journal"

# Compilation Settings
[tool.flet.compile]
app = false
packages = false
cleanup = false

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "black>=24.0.0",
    "ruff>=0.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--tb=short",
    "--strict-markers",
    "--disable-warnings",
    "--color=yes"
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "ai: marks tests that require AI functionality",
    "integration: marks tests as integration tests",
    "ui: marks tests that test UI components"
]
testmon = false
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning"
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "ruff>=0.12.7",
]
